# sylpheed-plugin-factory

./: .gitignore  .travis.yml  Makefile.am  README.md  configure.ac  libsylplugin-factory.pc.in  make-mingw.sh  sylplugin-factory.pc.in
include/: Makefile.am  sylplugin_i18n.h
m4/: compiler_flag.m4  sylplugin_factory.m4
misc/: configure.sh  copy.sh  setup-travis.sh
misc/travis/: configure.sh  sylpheed.sh  sylplugin-factory.sh
po/: ja.po
res/: version.rc.in
src/: Makefile.am  sylpf_utility.c  sylpf_utility.h  sylplugin_factory.c  sylplugin_factory.h
